css/index.css
/* Sick stylings go here. */

body {
	color: #fff;
	background-color: #00ABA9;
	font-family: 'Lato', sans-serif;
	font-weight: 100;
	-webkit-transition: background-color 2s;
}

.logo {
	position: absolute;
	text-align: center;
	width: 36%;
	top: 7%;
	left: 32%;
	font-size: 5vw;
}

.time, .hour, .minute, .second {
	display: inline;
}

.time {
	font-size: 6vw;
	opacity: 1;
	position: absolute;
	text-align: center;
	width: 50%;
	left: 25%;
	top: 30%;

	transition: opacity 1s;
}

.button-wrapper {
	text-align: center;
	position: absolute;
	top: 50%;
	left: 40%;
	width: 20%;
}

.btn {
	border: none;
	font-family: 'Lato', sans-serif;
}

.btn:focus {
	outline: none;
}

.wake-up, .sleep {
	display: none;
}

.wake-up, .sleep, .set-alarm {
	margin: 2%;
	text-align: center;
	text-decoration: none;
	font-size: 1.5em;
	font-weight: 200;
	left: 50%;
	width: 15vw;
	height: 5vw;

	border: 1px solid #fff;

	-webkit-transition: width 0.5s, color 0.5s, background-color 0.5s, left 0.5s, font-size 0.5s, opacity 0.5s;
}

.sleep {
	top: 100%;
}

.sleep, .set-alarm {
	color: #00ABA9;
}

.wake-up {
	color: #162145;
}

.wake-up:hover, .sleep:hover, .set-alarm:hover {
	cursor: pointer;
	color: #fff;
}

.sleep:hover, .set-alarm:hover {
	background-color: #00ABA9;
}

.wake-up:hover {
	background-color: #162145;
}

.alarm {
	font-weight: 100;
	position: absolute;
	font-size: 6vw;
	opacity: 0;
	width: 30%;
	left: 35%;
	top: 65%;

	-webkit-transition: opacity 1s;
}

.alarm div {
	display: inline;
	font-weight: 100;
}

.alarm-hour, .alarm-minute, .alarm-second, .alarm-meridian {
	position: relative;
	margin: 1%;
	transition: color 0.4s;
}

.alarm-hour input, .alarm-minute input,
.alarm-second input {
	display: inline;
	font-size: 6vw;
	text-align: right;
	height: 7vw;
	width: 25%;
	min-width: 8vw;
	color: #fff;
	background-color: transparent;
	border: none;
	font-family: 'Lato', sans-serif;
	font-weight: 100;
	border-bottom: 1px solid white;

	transition: border-bottom 0.4s;
}

.alarm-hour input:hover, .alarm-minute input:hover,
.alarm-second input:hover {
	cursor: pointer;
	border-bottom: 1px solid red;
}

#meridian-input {
	-webkit-transition: color 0.4s;
	transition: color 0.4s;
}

#meridian-input:hover {
	cursor: pointer;
	color: red;
}

.unclickable {
	pointer-events: none;
}

.faded { /* drank */
	opacity: 0.4;
}

.hide {
	opacity: 0;
}

.alarm-label {
	position: absolute;
	display: block;
	text-align: center;
	font-size: 2vw;
	left: 0%;
	top: 100%;
	width: 100%;

	-webkit-transition: opacity: 0.4s;
	transition: opacity: 0.4s;
}

::-webkit-input-placeholder {
    color: white;
    font-family: 'Lato', sans-serif;
    font-size: 2vw;
    text-align: center;
	font-weight: 100;
}

input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
	-webkit-appearance: none;
	margin: 0;
}

input:focus {
	outline: none;
}

